Wed Jul 19 17:21:38 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * orbsvcs/tests/AVStreams/Asynch_Three_Stage/Connection_Manager.cpp
          (load_ep_addr):

          Use new ACE_CString::size_type type to hold string
          position/index value, instead of "int".  Addresses "comparison
          between signed and unsigned" warnings.

Wed Jul 19 15:52:11 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/IDL_Test/anonymous.idl:
        * tests/IDL_Test/typedef.idl:
        * tests/IDL_Test/valuetype.idl:
        
          Entries to test sequence of valuetype as valuetype member
          and typedefs of string with the same bound repeated in
          different compilation units that are linked in the same
          build.

Wed Jul 19 15:03:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbscvs/orbsvcs/IFRService/*S.h:
          Replace ace\pre.h with ace/pre.h, seems generation with MPC is
          dependent on windows or linux

Wed Jul 19 13:18:41 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * tao/Codeset/Codeset_Descriptor.cpp:
        * tao/Codeset/UTF16_BOM_Translator.cpp:

          Added static casts to remove build warnings from some 64-bit
          compilers where unsigned long and ACE_CDR::ULong were mixed.
          It was necessary to use static_cast<> as the size of the data in
          most cases needed to be size_t/unsigned long.

Wed Jul 19 12:31:50 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * tao/LocalObject.cpp:
        * tao/ORB.h:
        * tao/ORB.i:
        * tao/ORB_Core.h:
        * tao/ORB_Core.i:
        * tao/Principal.h:
        * tao/Principal.i:
        * tao/Profile.h:
        * tao/Profile.cpp:

          In my change from Mon Jul 17 14:40:43 UTC 2006, I modified these
          files to use an ACE_Atomic_Op<> with an unsigned long.  They all
          had instances where unsigned long and CORBA::ULong were being