@@ -712,7 +712,7 @@ TAO_DIOP_Acceptor::parse_options (const char *str)
         }
       else if (end != ACE_CString::npos)
         {
-          ACE_CString opt = options.substring (begin, end);
+          ACE_CString opt = options.substring (begin, end - begin);
 
           ACE_CString::size_type const slot = opt.find ("=");
 
