@@ -946,7 +946,7 @@ TAO_SCIOP_Acceptor::parse_options (const char *str)
   // before the object key.
   for (size_t i = 0; i < len; ++i)
     if (options[i] == option_delimiter)
-      option_count++;
+      ++option_count;
 
   // The idea behind the following loop is to split the options into
   // (option, name) pairs.
@@ -956,18 +956,15 @@ TAO_SCIOP_Acceptor::parse_options (const char *str)
   //    `option1=foo'
   //    `option2=bar'
 
-  int begin = 0;
-  int end = -1;
+  ACE_CString::size_type begin = 0;
+  ACE_CString::size_type end = 0;
 
   for (CORBA::ULong j = 0; j < option_count; ++j)
     {
-      begin += end + 1;
-
       if (j < option_count - 1)
         end = options.find (option_delimiter, begin);
       else
-        end = static_cast<CORBA::ULong> (len)
-          - begin;  // Handle last endpoint differently
+        end = len;
 
       if (end == begin)
         ACE_ERROR_RETURN ((LM_ERROR,
@@ -975,11 +972,11 @@ TAO_SCIOP_Acceptor::parse_options (const char *str)
                           -1);
       else if (end != ACE_CString::npos)
         {
-          ACE_CString opt = options.substring (begin, end);
+          ACE_CString opt = options.substring (begin, end - begin);
 
-          int slot = opt.find ("=");
+          ACE_CString::size_type slot = opt.find ("=");
 
-          if (slot == static_cast<int> (len - 1)
+          if (slot == len - 1
               || slot == ACE_CString::npos)
             ACE_ERROR_RETURN ((LM_ERROR,
                                ACE_TEXT ("TAO (%P|%t) SCIOP option <%s> is ")
@@ -1026,8 +1023,15 @@ TAO_SCIOP_Acceptor::parse_options (const char *str)
                                ACE_TEXT ("TAO (%P|%t) Invalid SCIOP option: <%s>\n"),
                                name.c_str ()),
                               -1);
+
+          begin = end + 1;
+        }
+      else
+        {
+          break; // No other options.
         }
     }
+
   return 0;
 }
 
